Source/WebCore/platform/mac/ScrollAnimatorMac.h
@@ -46,8 +46,6 @@ private:
     bool shouldForwardWheelEventsToParent(const PlatformWheelEvent&) const;
     bool handleWheelEvent(const PlatformWheelEvent&) final;
 
-    bool platformAllowsScrollAnimation() const;
-
     void handleWheelEventPhase(PlatformWheelEventPhase) final;
 
     bool isRubberBandInProgress() const final;
